--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://goitacademy.github.io/goit-js-hw-09",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-9/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-09/"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "@vimeo/player": "^2.17.1",
+    "flatpickr": "^4.6.13",
     "lodash": "^4.17.21",
     "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
+    "notiflix": "^3.2.5",
     "simplelightbox": "^2.10.3"
   },
   "devDependencies": {
